Admin dashboard completed

--- a/assets/admin/dashboard.html
+++ b/assets/admin/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="../css/dashboard.css">
 </head>
 <body>
     
@@ -14,11 +15,13 @@
         </div>
 
         <div class="panel">
-            <input type="button" value="APPROVE REQUESTS">
-            <input type="button" value="STUDENT DETAILS">
-            <input type="button" value="UPDATE BOOK STATUS">
-            <input type="button" value="ISSUED BOOKS">
-            <input type="button" value="CHECK BOOK AVAILABILITY">
+            <div class="panelbtns">
+                <input type="button" value="APPROVE REQUESTS">
+                <input type="button" value="STUDENT DETAILS">
+                <input type="button" value="UPDATE BOOK STATUS">
+                <input type="button" value="ISSUED BOOKS">
+                <input type="button" value="CHECK BOOK STOCK">
+            </div>
         </div>
 
     </div>
